<resources>
    <string name="app_name">Learning Languages</string>
    <string name="english_level_1">English Level 1</string>
    <string name="english_level_2">English Level 2</string>
    <string name="kotlin_level_1">Kotlin Level 1</string>
    <string name="kotlin_level_2">Kotlin Level 2</string>
    <string name="java_level_1">Kotlin Level 1</string>
    <string name="java_level_2">Kotlin Level 2</string>
    <string name="hello_kotlin_fragment">Hello Kotlin fragment</string>
    <string name="answer_option_english_fragment">Вариант ответа</string>
    <string name="task_english_fragment">Задание</string>
    <string name="english_level_1_card_view">Level 1</string>
    <string name="english_level_2_card_view">Level 2</string>
    <string name="kotlin_level_1_card_view">Level 1</string>
    <string name="kotlin_level_2_card_view">2</string>
    <string name="java_level_1_card_view">Level 1</string>
    <string name="java_level_2_card_view">Level 2</string>
    <string name="name_level_1_card_view">NO NAME 1</string>
    <string name="name_level_2_card_view">NO NAME 2</string>
    <string name="victory_finish">УРА!!!\nВы завершили тест!</string>
    <string name="remains_to_answer">Всего осталось ответить: </string>
    <string name="favourites">Избраное</string>
    <string name="statistics">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="about_app">О приложении</string>

    <string name="learning_together">Учимся в месте</string>
    <string name="knowledge_check">Проверка знаний</string>

    <!-- TaskFragment -->
    <string name="add_favorites">Добавили в избранное</string>
    <string name="delete_favorites">Удалили из избранного</string>

    <string name="back_card">Назад</string>
    <string name="forward_card">Вперед</string>
    <string name="name_english">Значение</string>
    <string name="name_translation">Перевод</string>

    <!-- Dialog showFinishAlertDialog (LearningFragment) -->
    <string name="message_finish_finish">Вы закончили просмотр карточек.
        \n\nХотите продолжить изучения языка или перейти к тестам?</string>
    <string name="continue_studying">Продолжить изучение!</string>
    <string name="back_tests">К тестам!</string>
    <string name="start_fragment">В главное меню!</string>
    <string name="still_lesson">Остатся в этом уроке</string>
    <string name="title_dialog">Заголовок</string>
    <string name="selection_error">Выберети один из пунктов мееню</string>

    <!-- layout -> default -->
    <string name="progress_counter">0/0</string>

    <!-- Для графика успеваимости -->
    <string name="language_acquisition">Прогресс обучения</string>
    <string name="positive_chart">Отлично</string>
    <string name="negative_chart">Плохо</string>
    <string name="grade_chart">Успеваемость</string>
    <string name="reset_statistics">Сбросить статистику!</string>
    <string name="chart_grade">График успеваемости!</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>
    <string name="right_attempts">Успех</string>
    <string name="wrong_attempts">Отрицательные ответы</string>
    <string name="description_legend">Показатели усвоения иностранного языка</string>
    <string name="delete_data">Удаление данных</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>

    <!-- Success Fragment -->
    <string name="total_tasks">Всего заданий: </string>
    <string name="positive_answers">Положительных ответов: </string>
    <string name="negative_answers">Отрицательных ответов: </string>
    <string name="material_assimilated">Усвоено: </string>
    <string name="delete_data_text">Вы уверены что хотите удалить всю статистику?</string>
    <string name="IC_show_all">Показать Всё</string>
    <string name="lesson">Урок</string>
    <string name="for_testing">для тестирования</string>
    <string name="answer">Ответ</string>

</resources>