<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/example_back">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/MCardMargin_16dp"
        android:layout_marginTop="@dimen/MCardMargin_16dp"
        android:layout_marginEnd="@dimen/MCardMargin_16dp"
        android:layout_marginBottom="@dimen/MCardMargin_16dp"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/MCard_Radius_15dp"
        app:cardElevation="@dimen/MCard_Elevation_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/example"
        app:strokeWidth="@dimen/MCard_Stroke_1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_dialog_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/MCardMargin_16dp"
                android:layout_marginTop="@dimen/MCardMargin_16dp"
                android:layout_marginEnd="@dimen/MCardMargin_16dp"
                android:gravity="center"
                android:hint="@string/title_dialog"
                android:paddingBottom="@dimen/MCardMargin__8dp"
                android:textColor="@color/example_dark"
                android:textSize="@dimen/MCard_Text_18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/MCardMargin_16dp"
                android:layout_marginTop="@dimen/MCardMargin_24dp"
                android:layout_marginEnd="@dimen/MCardMargin_16dp"
                android:text="@string/continue_studying"
                android:textColor="@color/example_middle"
                android:textSize="@dimen/default_text_button"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/MCard_Radius_15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_dialog_text_view"
                app:strokeColor="@color/example"
                app:strokeWidth="@dimen/MCard_Stroke_1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tests_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/MCardMargin_16dp"
                android:layout_marginTop="@dimen/MCardMargin_16dp"
                android:layout_marginEnd="@dimen/MCardMargin_16dp"
                android:text="@string/back_tests"
                android:textColor="@color/example_middle"
                android:textSize="@dimen/default_text_button"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/MCard_Radius_15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/continue_button"
                app:strokeColor="@color/example"
                app:strokeWidth="@dimen/MCard_Stroke_1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_menu_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/MCardMargin_16dp"
                android:layout_marginTop="@dimen/MCardMargin_16dp"
                android:layout_marginEnd="@dimen/MCardMargin_16dp"
                android:text="@string/start_fragment"
                android:textColor="@color/example_middle"
                android:textSize="@dimen/default_text_button"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/MCard_Radius_15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tests_button"
                app:strokeColor="@color/example"
                app:strokeWidth="@dimen/MCard_Stroke_1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/MCardMargin_16dp"
                android:layout_marginTop="@dimen/MCardMargin_16dp"
                android:layout_marginEnd="@dimen/MCardMargin_16dp"
                android:layout_marginBottom="@dimen/MCardMargin_16dp"
                android:text="@string/still_lesson"
                android:textColor="@color/example_middle"
                android:textSize="@dimen/default_text_button"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/MCard_Radius_15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_menu_button"
                app:strokeColor="@color/example"
                app:strokeWidth="@dimen/MCard_Stroke_1dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>